--- a/vars/config
+++ b/vars/config
@@ -1,6 +1,6 @@
-#!/bin/bash
-
+PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 DOCKERURL="https://github.com/docker/machine/releases/download/v0.15.0"
 REPO="https://github.com/netuddmeg/my_first_docker_prod.git"
 PROJECTNAME="my_first_docker_project"
+
 
