--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 version: "3"
 services:
-  app:
-    build: 
-    image: my_first_docker_project
-    restart: allways
+  web:
+    build: ./my_first_docker_prod/
     ports:
-      - 8000:80
+      - "80:80"
