--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,28 @@
-version: "3"
+version: '3.2'
 services:
-  web:
-    build: .
-    ports:
-      - "80:80"
-    volumes:
-      - ./src:/usr/share/nginx/html
-    healthcheck:
-      test: curl --fail -s http://localhost:80/ || exit 1
-      interval: 10s
-      timeout: 5s
-      retries: 3
+  backend1:
+      build: ./backend
+      tty: true
+      volumes:
+        - './backend/src:/backend-dir-inside-container'
+  backend2:
+      build: ./backend
+      tty: true
+      volumes:
+        - './backend/src:/backend-dir-inside-container'
+  backend3:
+      build: ./backend
+      tty: true
+      volumes:
+        - './backend/src:/backend-dir-inside-container'
+  loadbalancer:
+      build: ./load-balancer
+      tty: true
+      links:
+          - backend1
+          - backend2
+          - backend3
+      ports:
+          - '80:8080'
+volumes:
+  backend:
