--- a/load-balancer/Dockerfile
+++ b/load-balancer/Dockerfile
@@ -7,7 +7,10 @@ COPY nginx.conf /etc/nginx/nginx.conf
 # Port 8080 of the container will be exposed and then mapped to port
 # 8080 of our host machine via Compose. This way we'll be able to 
 # access the server via localhost:8080 on our host.
-EXPOSE 8080
+EXPOSE 80
+
+# health check
+HEALTHCHECK --interval=10s --timeout=3s CMD curl --fail http://localhost:80 || exit 1
 
 # Start Nginx when the container has provisioned.
 CMD ["nginx", "-g", "daemon off;"]
