--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,19 @@ services:
       build: ./backend
       tty: true
       volumes:
-        - '/var/www/html/'
+        - ./:/var/www/html/
 
   backend2:
       build: ./backend
       tty: true
       volumes:
-        - '/var/www/html/'
+        - ./:/var/www/html/
 
   backend3:
       build: ./backend
       tty: true
       volumes:
-        - '/var/www/html/'
+        - ./:/var/www/html/
 
   loadbalancer:
       build: ./load-balancer
