--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ WORKDIR /backend-dir-inside-container
 
 HEALTHCHECK --interval=5s --timeout=3s CMD curl --fail http://localhost:80 || exit 1
 
-CMD ["/usr/local/bin/node","/var/www/html/index.js"]
+CMD ["/usr/local/bin/node","/backend-dir-inside-container/index.js"]
 # Our Nginx container will forward HTTP traffic to containers of 
 # this image via port 3000.
 EXPOSE 3000
